%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#74c7e8", "primaryBorderColor": "#1f2937", "primaryTextColor": "#111827", "lineColor": "#2f2f2f", "fontFamily": "Arial"}}}%%
classDiagram
  direction LR
  class AIProduct {
    -id : int
    -product_id : int
    -name : String
    -description : Text
    -category : String
    -price : Float
    -encoded_id : int
  }
  class UserBehavior {
    -id : int
    -user_id : int
    -action : String
    -timestamp : DateTime
    -weight : Float
  }
  class HybridRecommendation {
    -user_id : int
    -query : String
    -final_score : Float
    -sequence_model_score : Float
    -graph_score : Float
    -rag_score : Float
  }
  class HybridRetriever {
    -dense_weight : Float
    -sparse_weight : Float
    -graph_weight : Float
    -top_k : int
  }
  AIProduct "1" <-- "*" UserBehavior
  UserBehavior "*" ..> "*" HybridRecommendation : scores
  HybridRecommendation ..> HybridRetriever : rag_scores
